--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -6,5 +6,5 @@
     </p><br>
     <button class="bg-indigo-500 px-3 py-2 hover:bg-indigo-400 rounded-md">start now</button>
   </div>
-  <img src="images/FingerPrint.svg" alt="" class="w-80" />
+  <img src="public/images/FingerPrint.svg" alt="" class="w-80" />
 </header>
