--- a/src/components/landing/Info.astro
+++ b/src/components/landing/Info.astro
@@ -1,19 +1,19 @@
 <section class="flex flex-col py-10 md:flex-row md:p-20 gap-y-10">
     <div class="flex-1 grid grid-cols-2 gap-4">
         <div class="text-center">
-            <img src="favicon.svg" class="w-20 m-auto">
+            <img src="public/favicon.svg" class="w-20 m-auto">
             <p class="mt-4">Dev Managment</p>
         </div>
         <div class="text-center">
-            <img src="favicon.svg" class="w-20 m-auto">
+            <img src="public/favicon.svg" class="w-20 m-auto">
             <p class="mt-4">Dev Profile</p>
         </div>
         <div class="text-center">
-            <img src="favicon.svg" class="w-20 m-auto">
+            <img src="public/favicon.svg" class="w-20 m-auto">
             <p class="mt-4">Dev Info</p>
         </div>
         <div class="text-center">
-            <img src="favicon.svg" class="w-20 m-auto">
+            <img src="public/favicon.svg" class="w-20 m-auto">
             <p class="mt-4">Dev Payment</p>
         </div>
     </div>
